--- a/translations/fr/pack/side/wog_encounter.json
+++ b/translations/fr/pack/side/wog_encounter.json
@@ -185,14 +185,8 @@
     },
     {
         "code": "86024",
-        "flavor": "A vast network of cosmic tunnels where gravity is warped in a surreal web of astral dimensions.",
-        "name": "Hub Dimension",
-        "subname": "Unsealed",
-        "text": "While there are 6[per_investigator] or more clues around Hub Dimension, your group has \"sealed off the Hub Dimension.\"",
-        "traits": "Portail."
-    },
-    {
-        "code": "86024b",
+        "back_flavor": "A vast network of cosmic tunnels where gravity is warped in a surreal web of astral dimensions.",
+        "back_text": "While there are 6[per_investigator] or more clues around Hub Dimension, your group has \"sealed off the Hub Dimension.\"",
         "name": "Hub Dimension",
         "subname": "Gateway to Destruction",
         "text": "Hub Dimension cannot have attachments.\nHub Dimension is connected to each [[Ritual Site]], and vice versa.\n[action]: Test [willpower] (2) or [intellect] (2). If you succeed, spend 3 clues or remove 2 clues from around Hub Dimension to deal 2 damage to an [[Ancient One]] enemy (if you succeed by 3 or more, instead deal 3 damage).",
